# freeradius-admin

./: .env.example  .gitignore  DEPLOYMENT.md  FREERADIUS.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  permissions.py  schemas.py  security.py
backend/app/routers/: accounting.py  auth.py  dashboard.py  groups.py  invoices.py  managers.py  nas.py  notifications.py  profiles.py  reports.py  system.py  users.py
backend/app/services/: render.py  scheduler.py  whatsapp.py
db/: 01-schema.sql  02-seed.sql  03-phase1-isp-model.sql  04-phase2-managers-rbac.sql  05-phase3-invoices-ledger.sql  06-phase3-invoice-sequences.sql  07-phase4-whatsapp-notifications.sql
deploy/: nginx.conf  setup-vps.sh
deploy/freeradius/: install-freeradius.sh
frontend/: .eslintrc.cjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
frontend/src/components/: ChangePasswordDialog.tsx  Layout.tsx  PageHeader.tsx  Pagination.tsx  RequireAuth.tsx  UserStatusBadge.tsx
frontend/src/lib/: api.ts  auth.tsx  utils.ts
frontend/src/locales/: ar.json  en.json
frontend/src/pages/: Accounting.tsx  AuthLog.tsx  Dashboard.tsx  Groups.tsx  Invoices.tsx  Login.tsx  Managers.tsx  Nas.tsx  NotificationTemplates.tsx  Notifications.tsx  OnlineUsers.tsx  Profiles.tsx  Reports.tsx  (+3 more)
whatsapp/: Dockerfile  package.json
whatsapp/src/: index.js
(+6 files in other folders)
